2009-03-04  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c (gnome_volume_applet_refresh): Move the dock update
	code to be in sync with the icon update code. Bug 573924. Fixes
	problems like bug 573924.

==================== 2.25.92 ======================

2009-02-17  Luca Ferretti  <elle.uca@libero.it>

	* docs/it/figures: Deleted figures directory, not needed

==================== 2.25.91 ======================

2009-02-17  Callum McKenzie  <callum@spooky-possum.org>

	* load.c:
	* applet.c: Patch from "Tefnet developers" to reload the device
	list. This should assist with bugs 167606 and 519388.
	
	* applet.c: Replace more deprecated functions. 

2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* docs/eu/eu.po: Added Basque translation.
	* docs/Makefile.am: Added 'eu' to DOC_LINGUAS.

==================== 2.25.90 ======================

2009-02-02  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c:
	* dock.c: Make the dock popdown when it looses focus.

2009-02-01  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c:
	* applet.c: Always make the dock horizontal since there doesn't
	appear to be an easy way to rotate the mute check-box.

2009-01-31  Mario Blättermann  <mariobl@svngnome.org>
	
	* docs/de/de.po: Small fix in German translation

2009-01-31  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_new): Add a border around the
	dock.

	* applet.c (gnome_volume_applet_button): Double click -> toggle
	mute rather than launching the volume control. Mute is the more
	common command.

2009-01-27  Callum McKenzie  <callum@spooky-possum.org>

	* preferences.[ch]: 
	* load.c:
	* applet.[ch]: Remove gstreamer 0.8 support. Remove libgnome
	stuff.

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)
