@@ -1,5 +1,8 @@
 2009-03-04  Callum McKenzie  <callum@spooky-possum.org>
 
+	* dock.c (cb_key_press): Hide the dock on an escape key - bug
+	572427.
+
 	* applet.c (gnome_volume_applet_refresh): Move the dock update
 	code to be in sync with the icon update code. Bug 573924. Fixes
 	problems like bug 573924.
